Bug#39098: Invalid check for serial_log_directory.

Falcon throws exception telling serial log directory is invalid 
and refuses to initialize. An attempt was already made to fix
this error in the past, and even this attempt did not work in
all cases (root directory on Windows  like C: would not work for example)
            
Solution presented here is rather simple - we do not check for valid 
directory at all. If serial log file cannot be opened or created during 
database creation, the server does not start anyway.
            
We should not also try to create database if serial log cannot be opened.
(there will be no loss of data, since we do not overwrite existing files,
but error message coming from create database is misleading).
            
Hence, this patch also contains fix to trigger database creation only 
if falcon_master.fts could be opened.